# DirectXShaderCompiler

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE.TXT  LLVMBuild.txt  README.md  ThirdPartyNotices.txt
cmake/: README  config-ix.cmake
cmake/modules/: AddLLVM.cmake  AddLLVMDefinitions.cmake  AddOCaml.cmake  AddSphinxTarget.cmake  CMakeLists.txt  CheckAtomic.cmake  ChooseMSVCCRT.cmake  CrossCompile.cmake  GetHostTriple.cmake  GetSVN.cmake  HandleLLVMOptions.cmake  HandleLLVMStdlib.cmake  LLVM-Config.cmake  LLVMConfig.cmake.in  LLVMConfigVersion.cmake.in  LLVMProcessSources.cmake  TableGen.cmake
docs/: AliasAnalysis.rst  Atomics.rst  BitCodeFormat.rst  BitSets.rst  BlockFrequencyTerminology.rst  BranchWeightMetadata.rst  CMake.rst  CMakeLists.txt  CodeGenerator.rst  CodingStandards.rst  CommandLine.rst  CoverageMappingFormat.rst  DXIL.rst  DxcOnUnix.rst  ExceptionHandling.rst  ExtendingLLVM.rst  FaultMaps.rst  GetElementPtr.rst  HLSLChanges.rst  HowToSetUpLLVMStyleRTTI.rst  HowToUseAttributes.rst  HowToUseInstrMappings.rst  InAlloca.rst  LLVMBuild.rst  LLVMBuild.txt  LangRef.rst  Lexicon.rst  LibFuzzer.rst  LinkTimeOptimization.rst  Makefile.sphinx  MarkedUpDisassembly.rst  MergeFunctions.rst  Passes.rst  ProgrammersManual.rst  README.txt  SourceLevelDebugging.rst  SourceLevelDebuggingHLSL.rst  SystemLibrary.rst  Vectorizers.rst  WritingAnLLVMBackend.rst  (+5 more)
docs/CommandGuide/: FileCheck.rst  index.rst  lit.rst  llc.rst  lli.rst  llvm-ar.rst  llvm-as.rst  llvm-bcanalyzer.rst  llvm-build.rst  llvm-config.rst  llvm-cov.rst  llvm-diff.rst  llvm-dis.rst  llvm-dwarfdump.rst  llvm-extract.rst  llvm-link.rst  llvm-nm.rst  llvm-profdata.rst  llvm-readobj.rst  llvm-stress.rst  llvm-symbolizer.rst  opt.rst  tblgen.rst
docs/Frontend/: PerformanceTips.rst
docs/TableGen/: BackEnds.rst  LangIntro.rst  LangRef.rst  index.rst
docs/_static/: llvm.css
docs/_templates/: layout.html
examples/: LLVMBuild.txt
lib/: LLVMBuild.txt
lib/DxilDia/: CMakeLists.txt  DxcPixCompilationInfo.cpp  DxcPixCompilationInfo.h  DxcPixDxilDebugInfo.cpp  DxcPixDxilDebugInfo.h  DxcPixDxilStorage.cpp  DxcPixDxilStorage.h  DxcPixEntrypoints.cpp  DxcPixLiveVariables.cpp  DxcPixLiveVariables.h  DxcPixLiveVariables_FragmentIterator.cpp  DxcPixLiveVariables_FragmentIterator.h  DxcPixTypes.cpp  DxcPixTypes.h  DxcPixVariables.cpp  DxilDia.cpp  DxilDia.h  DxilDiaDataSource.cpp  DxilDiaDataSource.h  DxilDiaSession.cpp  DxilDiaSession.h  DxilDiaSymbolManager.cpp  DxilDiaSymbolManager.h  DxilDiaTableInjectedSources.cpp  DxilDiaTableInjectedSources.h  DxilDiaTableLineNumbers.cpp  DxilDiaTableLineNumbers.h  DxilDiaTableSourceFiles.cpp  DxilDiaTableSourceFiles.h  DxilDiaTableSymbols.cpp  LLVMBuild.txt
lib/ExecutionEngine/: CMakeLists.txt  ExecutionEngine.cpp  ExecutionEngineBindings.cpp  GDBRegistrationListener.cpp  LLVMBuild.txt  SectionMemoryManager.cpp  TargetSelect.cpp
lib/ExecutionEngine/IntelJITEvents/: CMakeLists.txt  IntelJITEventListener.cpp  IntelJITEventsWrapper.h  LLVMBuild.txt  ittnotify_config.h  ittnotify_types.h  jitprofiling.c  jitprofiling.h
lib/ExecutionEngine/Interpreter/: CMakeLists.txt  Execution.cpp  ExternalFunctions.cpp  Interpreter.cpp  Interpreter.h  LLVMBuild.txt
lib/ExecutionEngine/MCJIT/: CMakeLists.txt  LLVMBuild.txt  MCJIT.cpp  MCJIT.h  ObjectBuffer.h
lib/ExecutionEngine/OProfileJIT/: CMakeLists.txt  LLVMBuild.txt  OProfileJITEventListener.cpp  OProfileWrapper.cpp
lib/ExecutionEngine/Orc/: CMakeLists.txt  ExecutionUtils.cpp  IndirectionUtils.cpp  LLVMBuild.txt  NullResolver.cpp  OrcMCJITReplacement.cpp  OrcMCJITReplacement.h  OrcTargetSupport.cpp
lib/ExecutionEngine/RuntimeDyld/: CMakeLists.txt  LLVMBuild.txt  RTDyldMemoryManager.cpp  RuntimeDyld.cpp  RuntimeDyldCOFF.cpp  RuntimeDyldCOFF.h  RuntimeDyldChecker.cpp  RuntimeDyldCheckerImpl.h  RuntimeDyldELF.cpp  RuntimeDyldELF.h  RuntimeDyldImpl.h  RuntimeDyldMachO.cpp  RuntimeDyldMachO.h
lib/ExecutionEngine/RuntimeDyld/Targets/: RuntimeDyldCOFFX86_64.h  RuntimeDyldMachOAArch64.h  RuntimeDyldMachOARM.h  RuntimeDyldMachOI386.h  RuntimeDyldMachOX86_64.h
lib/Fuzzer/: CMakeLists.txt  FuzzerCrossOver.cpp  FuzzerDriver.cpp  FuzzerFlags.def  FuzzerIO.cpp  FuzzerInterface.cpp  FuzzerInterface.h  FuzzerInternal.h  FuzzerLoop.cpp  FuzzerMain.cpp  FuzzerMutate.cpp  FuzzerSHA1.cpp  FuzzerSanitizerOptions.cpp  FuzzerTraceState.cpp  FuzzerUtil.cpp
lib/Fuzzer/test/: CMakeLists.txt  CounterTest.cpp  CxxTokensTest.cpp  DFSanMemcmpTest.cpp  DFSanSimpleCmpTest.cpp  FourIndependentBranchesTest.cpp  FullCoverageSetTest.cpp  FuzzerUnittest.cpp  InfiniteTest.cpp  NullDerefTest.cpp  SimpleTest.cpp  TimeoutTest.cpp  fuzzer.test  lit.cfg  lit.site.cfg.in
lib/Fuzzer/test/dfsan/: CMakeLists.txt
lib/Fuzzer/test/unit/: lit.cfg
projects/: LLVMBuild.txt
projects/dxilconv/tools/dxbc2dxil/: CMakeLists.txt  dxbc2dxil.cpp
projects/dxilconv/tools/dxilconv/: CMakeLists.txt  dxilconv.cpp
test/: CMakeLists.txt  Makefile.tests  TestRunner.sh  lit.cfg  lit.site.cfg.in
tools/: CMakeLists.txt  LLVMBuild.txt
tools/clang/tools/clang-fuzzer/: CMakeLists.txt  ClangFuzzer.cpp
tools/lli/: CMakeLists.txt  LLVMBuild.txt  OrcLazyJIT.cpp  OrcLazyJIT.h  RPCChannel.h  RemoteMemoryManager.cpp  RemoteMemoryManager.h  RemoteTarget.cpp  RemoteTarget.h  RemoteTargetExternal.cpp  RemoteTargetExternal.h  RemoteTargetMessage.h  lli.cpp
tools/lli/ChildTarget/: CMakeLists.txt  ChildTarget.cpp  LLVMBuild.txt
tools/lli/Unix/: RPCChannel.inc
tools/lli/Windows/: RPCChannel.inc
tools/llvm37-c-test/: CMakeLists.txt  calc.c  disassemble.c  helpers.c  include-all.c  llvm-c-test.h  main.c  metadata.c  module.c  object.c  targets.c
tools/llvm37-shlib/: CMakeLists.txt  libllvm.cpp
tools/lto/: CMakeLists.txt  LTODisassembler.cpp  lto.cpp  lto.exports
unittests/: CMakeLists.txt  Makefile.unittest
utils/: GenLibDeps.pl  LLVMBuild.txt  UpdateCMakeLists.pl  check-each-file  cmake-predefined-config-params  codegen-diff  countloc.sh  findmisopt  findoptdiff  findsym.pl  getsrcs.sh  lldbDataFormatters.py  llvm-compilers-check  (+10 more)
(+5956 files in other folders)
